working version - add new, remove all users

--- a/register.html
+++ b/register.html
@@ -40,7 +40,10 @@
 				</div>
 				<div class="col-sm-4" >
 					<div class="panel panel-default">
-					  	<div class="panel-heading">Data from server</div>
+					  	<div class="panel-heading">
+					  	<span>Data from server</span>
+					  	<button type="button" id='clear_all' class="pull-right btn btn-default btn-xs">clear all</button>
+					  	</div>
 					  	<div id="post_data">
 					  	</div>
 					</div>
