change on label

--- a/register.html
+++ b/register.html
@@ -88,8 +88,8 @@
 
 			<ul class="list-group">
 				<li class="list-group-item">
-					<span class='highLabel' data-label='first_name'>First name</span>
-					<input type="text" value="<%= data.first_name %>" name="first_name" class="form-control" placeholder="first name" />
+					<label class='highLabel' data-label='first_name' for="first_name">First name</label>
+					<input type="text" value="<%= data.first_name %>" name="first_name" class="form-control" placeholder="first name" id='first_name' required />
 				</li>
 				<li class="list-group-item">
 					<span class='highLabel' data-label='last_name'>Last name</span>
