--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="/">Home</a></li>
 						<li><a href="/register">Register user</a></li>
+						<li><a href="/tabs">Tabs</a></li>
 					</ul>
 				</div>
 			</nav>
