now for register jquery&underscore&backbone is incapsulated in module

--- a/register.html
+++ b/register.html
@@ -12,10 +12,10 @@
 		<link rel="stylesheet" type="text/css" href="/frameworks/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="/public/style.css">
 
-		<script type="text/javascript" src="/frameworks/jquery.js"></script>
-		<script type="text/javascript" src="/frameworks/underscore.js"></script>
-		<script type="text/javascript" src="/frameworks/backbone.js"></script>
-		<script type="text/javascript" src="/public/register/build_register.js"></script>
+		<script type="text/javascript" src="/frameworks/jquery19.js"></script>
+		<!--<script type="text/javascript" src="/frameworks/underscore.js"></script>-->
+		<!--<script type="text/javascript" src="/frameworks/backbone.js"></script>-->
+		<script type="text/javascript" src="/public/register/register.bundle.js"></script>
 
     </head>
 	<body>
@@ -30,6 +30,7 @@
 						<li class="active"><a href="/register">Register user</a></li>
 						<li><a href="#" id='other_place'>Render user in other place</a></li>
 						<li><a href="/tabs">Tabs</a></li>
+						<li><a href="/module3">Module3</a></li>
 					</ul>
 				</div>
 			</nav>
