--- a/tabs.html
+++ b/tabs.html
@@ -29,6 +29,7 @@
 						<li><a href="/">Home</a></li>
 						<li><a href="/register">Register user</a></li>
 						<li class="active"><a href="/tabs">Tabs</a></li>
+						<li><a href="/module3">Module3</a></li>
 					</ul>
 				</div>
 			</nav>
