--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						<li class="active"><a href="/">Home</a></li>
 						<li><a href="/register">Register user</a></li>
 						<li><a href="/tabs">Tabs</a></li>
+						<li><a href="/module3">Module3</a></li>
 					</ul>
 				</div>
 			</nav>
