--- a/register.html
+++ b/register.html
@@ -49,12 +49,9 @@
 					  	</div>
 					</div>
 				</div>
-				<div class="col-sm-4" >
-					<div class="panel panel-default">
-					  	<div class="panel-heading">re-render</div>
-					  	<ul class="re_render">
-					  	</ul>
-					</div>
+				<div class="col-sm-4">
+					<form method="POST" action="/reseller/ajax/member/register_new_customer/" name="form" id="registerCustomerForm2" class="">
+					</form>
 				</div>
 	    	</div>
 		</div>
