ad bootstrap as is

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="mnemo">
 		<meta name="keywords" content="mnemo">
 		<meta name="author" content="silentium">
+		<link rel="stylesheet" href="/public/bootstrap.css">
     </head>
 	<body>
 		<p>loading...</p>
