--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 		<meta name="description" content="mnemo">
 		<meta name="keywords" content="mnemo">
 		<meta name="author" content="silentium">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="/public/bootstrap.css">
     </head>
 	<body>
-		<p>loading...</p>
-		<div id="main"></div>
+		<div id="loading">loading...</div>
+		<div class="container" id="main"></div>
 		<script type="text/javascript" src="/public/public.bundle.js"></script>
 	</body>
 </html>
