--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Page Title</title>
+		<title>Мнемотехника</title>
 		<meta charset="UTF-8">
 		<meta name="description" content="mnemo">
 		<meta name="keywords" content="mnemo">
 		<meta name="author" content="silentium">
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="/public/bootstrap.css">
     </head>
