--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="offline.manifest">
 	<head>
 		<title>Мнемотехника</title>
 		<meta charset="UTF-8">
@@ -7,6 +7,7 @@
 		<meta name="keywords" content="mnemo">
 		<meta name="author" content="silentium">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="mobile-web-app-capable" content="yes">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="/public/bootstrap.css">
