--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 	<body>
 		<div class="container" id="main">
 			<hr/>
-			<nav class="nav nav-pills flex-column flex-sm-row">
+			<nav class="nav nav-pills flex-column flex-sm-row" id="navigation">
 				<a class="flex-sm-fill text-sm-center nav-link active" href="#main">main</a>
 				<a class="flex-sm-fill text-sm-center nav-link" href="#help">help</a>
 			</nav>
 			<hr/>
 		</div>
 		<div class="container" id="loading">loading...</div>
-		<div class="container" id="main"></div>
+		<div class="container _hide" id="numbers"></div>
 		<div class="container _hide" id="help"></div>
 		<script type="text/javascript" src="/public/public.bundle.js"></script>
 	</body>
