fix trouble with safari browser - click/cursor

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="offline.manifest">
 <!--manifest="offline.manifest"-->
 	<head>
 		<title>Мнемотехника</title>
@@ -20,6 +20,7 @@
 				<a class="flex-sm-fill text-sm-center nav-link" href="#help">help</a>
 			</nav>
 			<hr/>
+			<!--<div class="container" id="debug">debug</div><hr/>-->
 		</div>
 		<div class="container" id="loading">loading...</div>
 		<div class="container _hide" id="numbers"></div>
