help navigation scroll to

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="offline.manifest">
+<html>
 <!--manifest="offline.manifest"-->
 	<head>
 		<title>Мнемотехника</title>
