--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 		<link rel="stylesheet" href="/public/bootstrap.css">
     </head>
 	<body>
+		<!--<button class="navbar-toggler hidden-sm-up pull-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">☰</button>-->
 		<div class="container" id="main">
 			<hr/>
 			<nav class="nav nav-pills flex-column flex-sm-row" id="navigation">
 				<a class="flex-sm-fill text-sm-center nav-link active" href="#main">main</a>
 				<a class="flex-sm-fill text-sm-center nav-link" href="#help">help</a>
+				<a class="flex-sm-fill text-sm-center nav-link" href="#clear">clear</a>
 			</nav>
 			<hr/>
 			<!--<div class="container" id="debug">debug</div><hr/>-->
