--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="offline.manifest">
+<html >
 <!--manifest="offline.manifest"-->
 	<head>
 		<title>Мнемотехника</title>
@@ -25,7 +25,7 @@
 			<nav class="nav nav-pills flex-column flex-sm-row" id="navigation">
 				<a class="flex-sm-fill text-sm-center nav-link active" href="#main">main</a>
 				<a class="flex-sm-fill text-sm-center nav-link" href="#help">help</a>
-				<a class="flex-sm-fill text-sm-center nav-link" href="#clear">clear</a>
+				<!--<a class="flex-sm-fill text-sm-center nav-link" href="#clear">clear</a>-->
 			</nav>
 			<hr/>
 			<!--<div class="container" id="debug">debug</div><hr/>-->
