--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html >
-<!--manifest="offline.manifest"-->
+<html manifest="/public/offline.manifest">
 	<head>
 		<title>Мнемотехника</title>
 		<meta charset="UTF-8">
