Change number generation - there will be no more place for zero; And add print button;

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
 	<body>
 		<!--<button class="navbar-toggler hidden-sm-up pull-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">☰</button>-->
-		<div class="container" id="main">
+		<div class="container print_hide_js" id="main">
 			<hr/>
 			<nav class="nav nav-pills flex-column flex-sm-row" id="navigation">
 				<a class="flex-sm-fill text-sm-center nav-link active" href="#main">main</a>
@@ -30,7 +30,7 @@
 			<!--<div class="container" id="debug">debug</div><hr/>-->
 		</div>
 		<div class="container" id="loading">loading...</div>
-		<div class="container _hide" id="numbers"></div>
+		<div class="_hide" id="numbers"></div>
 		<div class="container _hide" id="help"></div>
 		<script type="text/javascript" src="/public/public.bundle.js"></script>
 	</body>
